--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Listado de libros">
+    <meta property="og:url" content="https://listado-libros.netlify.app">
+    <meta property="og:image" content="./images/profile.webp">
+    <meta property="og:description" content="Encuentra el libro de tu agrado en la colleción de libros gratuitos">  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/loading.css">
